--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -121,8 +121,8 @@
                     </div>
                     <p>{{ question['numero_domanda'] }}. {{ question['testo_domanda'] }}</p>
                     <div class="options">
-                        <input type="radio" name="{{ question['numero_domanda'] }}" value="Richtig" required> VERO
-                        <input type="radio" name="{{ question['numero_domanda'] }}" value="Falsch" required> FALSO
+                        <input type="radio" name="{{ question['numero_domanda'] }}" value="VERO" required> Richtig
+                        <input type="radio" name="{{ question['numero_domanda'] }}" value="FALSO" required> Falsch
                     </div>
                     <div class="clear"></div>
                 </div>
